@@ -1,7 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.54-1lsb3.2.i486.rpm 3567002 BLAKE2B 371c7f8419e00cf98a9e9f55223a41a66a68bb1d8f39eab97000c5a5f71343227fb65c41c6726163849250936e512217756cffda2fa3dac8556faec7a1ff5161 SHA512 277c344f6fe6b29d48f743fa6450070b8ceb83b0e1b07ae3fdd16336e3a63ba7bf2f3705b9185623aba5e5d8dad6b30e2fb733b22cb785750e42f2d9e2fc43ce
-DIST epson-inkjet-printer-escpr2-1.1.54-1lsb3.2.x86_64.rpm 3566506 BLAKE2B f1d9452fb501e2b32a952e5756b9267282f919c835cabe16eb66ed01a8dc2545251f40d1c0216c49efc72da2c6ba14084b38f7aa4d3248dfcc2489319eb1446e SHA512 b570d8e163f346050be6c1aaa73d11b5710302f68a1938d342e4bc9d62ab89726b835c8a511c957129571747b301555d3f74fbfb91b7fcc40fad0f9654b71072
 DIST epson-inkjet-printer-escpr2-1.1.55-1lsb3.2.i486.rpm 3593988 BLAKE2B ba8f501dc6717db035ffe13ee8dfc3214e5d2c44ccba7cdb1e5b740e171a92a07e55c368af61553435006ca89890a4aaa8a29b4e3ceb60d79de623967554e7c8 SHA512 e988ca024050656f7cf84508935a6a643db169890513f906d80c932985485603c0bf1c5a5c998e54739fe1f673d5969bc68a78df3ce53f7dd724c7ac03cf1b81
 DIST epson-inkjet-printer-escpr2-1.1.55-1lsb3.2.x86_64.rpm 3593472 BLAKE2B d99b923b126463b579a27dd6dfa0740a7cf44edc796b4e8c3b05e8521726703a0966e8cdcc7b6b260e8e78c84136e1db54998f7229109b85c90404ec85e6897a SHA512 1c187ee3934e07258293694e78b153cececdcb84973a08802d1d463b7798440f1083365790799a6b0c3f057a8af465a15937a4837f4f12dd3e9c352508121062
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.54.ebuild 1670 BLAKE2B 232aab99a4fe63f20c8185d1b1c6cfeb8690cbda83cd00cad9c4aa74879a822e859db79eddf6da16f96a44407340e3ba1848a4bc46034d37837d8441ad0892de SHA512 5a48494943a54920e44ddfe6343e7c0b4cd756ae6ac008dd0cc2dce3c898e201c794f26bece87fea3d352159102baae81f4f16c1ccf3f73f89e0cd317438021d
+DIST epson-inkjet-printer-escpr2-1.1.56-1lsb3.2.i486.rpm 3629107 BLAKE2B 9ae2e49a5d9d03b7986a182c39b24a13b1c0883ad2879a69b073018fc1979936bbe51df78dc3dc5cc72cacb4d881dded0324185edc2b80ca5549d188ac1e1d12 SHA512 15c00a73107ff2295f230d055db483c67b0f793284fc885bf78a645e71bfc4abd3630554b5d60b18e803f11b4b2ec2c1546e419253523906f34490cb446df65d
+DIST epson-inkjet-printer-escpr2-1.1.56-1lsb3.2.x86_64.rpm 3628457 BLAKE2B 24b7455d77f2142a66bb129511586289d8360d7f3a489aabd3d3d9fe0d7ce177785738c41f27318ef39508cb642a871b50f961edef72a6a37df252c923d90a36 SHA512 c5ff0b4b52dd2f13424fc26d90ec25bd73312dd03407d19fea861841e99dfa6fe212aeb86a3aa1531b4f17eb2ce2aa80019b5fdfbabcd732c4824022d81d9570
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.55.ebuild 1670 BLAKE2B 508fd4021562993792cf4eb285e8b92357e5b1c0835abadd5ef8f08a95298fb8f0f09898bd109e2f98a998d5624520c2a8e0ff20fb0a739002e64546cb390327 SHA512 a0b087e14bb8552a80a7f7d31f35b7b49b58b2bd397a4a1f6e0b89542600b59c227cd1fd9fcc9fa0ea9d4b5e8f910d273dda5df91c50263e951c6589c2a81830
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.56.ebuild 1670 BLAKE2B c92a47e469f00780f0b2419c0c013edaf52b9a2b2c2c73aa735f0f72c8b1b8f7145f3a8a2baba7f02f148efeb9c8f083987903254a85e4fc7c9216fb59044d33 SHA512 4045ef902c4ab06a62ed434049b93455f07c5c97e90c41cc1dacff747d6399b66ca3d39785389785310946e13c9f3221fb373d4bf97185f34dff0ad13615dc0a
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
