@@ -5,8 +5,8 @@ EAPI=6
 
 inherit rpm
 
-DSC_x86="f/03/00/14/05/60/bc2afb149cb40c5c0556ac043bc26d1730d73dfd"
-DSC_amd64="f/03/00/14/05/60/fcf4ea5dfa99536a8fbc37426c56e1929076da75"
+DSC_x86="f/03/00/14/09/36/9dabee8332b3452c7961b8c14f6ac4650a3a6ae8"
+DSC_amd64="f/03/00/14/09/36/5637f1f551e309f0180caf9b92c0b56d264a04ce"
 
 DESCRIPTION="Epson ESC/P-R 2 generic Inkjet Printer Driver binary package"
 HOMEPAGE="https://download.ebz.epson.net/dsc/search/01/search/?OSC=LX"
